--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,12 @@
   padding: 0;
 }
 
+@media (max-width:9120px) {
+  body{
+    background: red; 
+    zoom: 75%;
+  }
+}
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   font-optical-sizing: auto;
@@ -13,6 +19,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #ededed;
+
 }
 
 .App {
