--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -22,6 +22,10 @@
   border-radius: 10px;
   // box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 
+  @media (max-width:1280px) {
+  
+    height: 130vh;
+  }
   &.open {
     width: 130px; 
   }
