--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,18 @@
   padding: 0;
 }
 
+@media (max-width:1280px) {
+  body{
+    zoom: 75%;
+  }
+  .App {
+    display: grid;
+    place-items: center;
+    height: 75vh;
+    margin: 10px;
+  }
+
+}
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
